The last chapter in a paper is called the conclusion

--- a/final_report.tex
+++ b/final_report.tex
@@ -333,7 +333,7 @@ Although not strictly being an ASA tool, rust-fmt\footnote{\url{https://github.c
 
 \newpage
 
-\section{Verdict}
+\section{Conclusion}
 
 Rust as a language is an excellent choice in areas where previously C++ was the only viable option. With its focus on concurrency and safety, it has major advantages over C++ whenever a project introduces concurrency or becomes complex enough to exhibit hard-to-debug problems related to invalid memory accesses. Eliminating these and other problems at compile time, Rust removes large sources of security vulnerabilities and programmer frustration.
 
