added non-red hyperlinks

--- a/final_report.tex
+++ b/final_report.tex
@@ -10,7 +10,7 @@
 \usepackage{geometry}
 \usepackage{color}
 \usepackage{graphicx}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage{listings}
 \usepackage{graphicx}
 \graphicspath{ {images/} }
